--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "blongular",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"description": "A simple and powerful blog system using WNS, MongoDB, Angular, Bootstrap and other stuff",
 	"main": "blongular.js",
 	"moduleClass": "wnServer",
@@ -23,7 +23,7 @@
 		"url": "https://github.com/blongular/blongular/issues"
 	},
 	"dependencies": {
-		"wnserver": "0.0.96",
+		"monostack": "0.0.5",
 		"node-static": "0.7.x",
 		"mongoose": "3.6.x",
 		"dustjs-linkedin": "2.0.x",
@@ -32,14 +32,14 @@
 		"express": "~3.4.7",
 		"formidable": "~1.0.14",
 		"bcrypt": "~0.7.7",
-		"wns-db-package": "0.0.1",
-		"wns-mongo-package": "0.0.5",
-		"wns-template-package": "0.0.3",
-		"wns-http-package": "0.1.4",
-		"wns-express-package": "0.0.5",
-		"wns-session-package": "0.0.4",
-		"wns-static-package": "0.0.6",
-		"wns-mvc-package": "0.0.13",
-		"wns-angular-package": "0.0.5"
+		"mono-db-package": "0.0.2",
+		"mono-mongo-package": "0.0.2",
+		"mono-template-package": "0.0.2",
+		"mono-http-package": "0.0.1",
+		"mono-express-package": "0.0.1",
+		"mono-session-package": "0.0.1",
+		"mono-static-package": "0.0.1",
+		"mono-mvc-package": "0.0.2",
+		"mono-angular-package": "0.0.1"
 	}
 }
