--- a/blongular/config/components.json
+++ b/blongular/config/components.json
@@ -2,30 +2,30 @@
 
 	"components": {
 
-		// wnAngularServer configuration (remove/comment to disable)
+		// AngularServer configuration (remove/comment to disable)
 		"angular": {
-			"class": "wnAngularServer",
+			"class": "AngularServer",
 			"useBower": true,
 			"compressAngular": true
 		},
 
-		// wnStaticServer configuration (remove/comment to disable)
+		// StaticServer configuration (remove/comment to disable)
 		"static": {
 			// "debug": true,
 			// "verbosity": 5,
-			"class": "wnStaticServer"
+			"class": "StaticServer"
 		},
 
-		// wnCache configuration (remove/comment to disable)
+		// Session configuration (remove/comment to disable)
 		"session": {
 			// "debug": true,
 			// "verbosity": 5,
-			"class": "wnSession"
+			"class": "Session"
 		},
 
-		// wnExpress configuration (remove/comment to disable)
+		// Express configuration (remove/comment to disable)
 		"express": {
-			"class": "wnExpress",
+			"class": "Express",
 			"use": {
 				"express.favicon": [],
 				"express.methodOverride": [],
@@ -33,34 +33,28 @@
 			}
 		},
 
-		// wnControllerServer configuration (remove/comment to disable)
+		// ControllerServer configuration (remove/comment to disable)
 		"controller": {
 			// "debug": true,
 			// "verbosity": 5,
-			"class": "wnControllerServer",
+			"class": "ControllerServer",
 			"defaultController": "main",
 			"errorPage": "main/error"
 		},
 
 		// Rest Controller: POST
 		"postREST": {
-			"class": "wnPostRest"
+			"class": "PostRest"
 		},
 
 		// Rest Controller: LOGIN
 		"loginREST": {
-			"class": "wnLoginRest"
+			"class": "LoginRest"
 		},
 
-		// wnCache configuration (remove/comment to disable)
-		"cache": {
-			"class": "wnCache",
-			"alias": "cache"
-		},
-
-		// wnView configuration (remove/comment to disable)
+		// View configuration (remove/comment to disable)
 		"view": {
-			"class": "wnView",
+			"class": "View",
 			"titleTemplate": "{self.title} — {app.title}",
 			"language": "en",
 			"menu": {},
@@ -69,9 +63,9 @@
 			"loadScriptPath": "js/"
 		},
 
-		// wnUrlManager configuration (remove/comment to disable)
+		// UrlManager configuration (remove/comment to disable)
 		"urlManager": {
-			"class": "wnUrlManager",
+			"class": "UrlManager",
 			"rules": {
 				"<page:\\d+>/?":"<controller:main>/<action:index>",
 				"<action:post>/<id:.+>":"<controller:main>/<action>",
@@ -80,9 +74,9 @@
 			}
 		},
 
-		// wnDbConnection configuration (remove comment to enable)
+		// DbConnection configuration (remove comment to enable)
 		"database": {
-			"class": "wnDbConnection",
+			"class": "DbConnection",
 			"alias": "db",
 			"engine": "mongo",
 			"address": "127.0.0.1",
@@ -91,5 +85,5 @@
 		}
 
 	}
-	
+
 }
