--- a/package.json
+++ b/package.json
@@ -23,23 +23,23 @@
 		"url": "https://github.com/blongular/blongular/issues"
 	},
 	"dependencies": {
-		"monostack": "0.0.5",
-		"node-static": "0.7.x",
-		"mongoose": "3.6.x",
-		"dustjs-linkedin": "2.0.x",
-		"dustjs-helpers": "1.1.x",
-		"moment": "~2.3.1",
-		"express": "~3.4.7",
-		"formidable": "~1.0.14",
-		"bcrypt": "~0.7.7",
-		"mono-db-package": "0.0.2",
-		"mono-mongo-package": "0.0.2",
-		"mono-template-package": "0.0.2",
-		"mono-http-package": "0.0.1",
-		"mono-express-package": "0.0.1",
-		"mono-session-package": "0.0.1",
-		"mono-static-package": "0.0.1",
-		"mono-mvc-package": "0.0.2",
-		"mono-angular-package": "0.0.1"
+		"monostack": "^0.1.0",
+		"node-static": "^0.7.x",
+		"mongoose": "^3.6.x",
+		"dustjs-linkedin": "^2.0.x",
+		"dustjs-helpers": "^1.1.x",
+		"moment": "^2.3.1",
+		"express": "^3.4.7",
+		"formidable": "^1.0.14",
+		"bcrypt": "^0.7.7",
+		"mono-db-package": "^0.0.3",
+		"mono-mongo-package": "^0.0.2",
+		"mono-template-package": "^0.0.3",
+		"mono-http-package": "^0.0.1",
+		"mono-express-package": "^0.0.1",
+		"mono-session-package": "^0.0.1",
+		"mono-static-package": "^0.0.1",
+		"mono-mvc-package": "^0.1.0",
+		"mono-angular-package": "^0.0.2"
 	}
 }
