--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blongular",
-  "version": "0.0.5",
+  "version": "0.1.0",
   "description": "A simple and powerful blog system using MonoStack, MongoDB, Angular, Bootstrap and other stuff",
   "main": "blongular.js",
   "moduleClass": "Server",
@@ -23,24 +23,26 @@
     "url": "https://github.com/blongular/blongular/issues"
   },
   "dependencies": {
-    "monostack": "^0.x.x",
-    "node-static": "^0.x.x",
-    "mongoose": "^3.x.x",
-    "dustjs-linkedin": "^2.x.x",
-    "dustjs-helpers": "^1.x.x",
-    "moment": "^2.x.x",
-    "express": "^3.x.x",
-    "formidable": "^1.x.x",
-    "bcrypt": "^0.7.7",
-    "handlebars": "^2.x.x",
-    "mono-db-package": "^1.x.x",
-    "mono-mongo-package": "^1.x.x",
-    "mono-template-package": "^1.x.x",
-    "mono-http-package": "^1.x.x",
-    "mono-express-package": "^0.x.x",
-    "mono-session-package": "^0.x.x",
-    "mono-static-package": "^0.x.x",
-    "mono-mvc-package": "^1.x.x",
-    "mono-angular-package": "^0.x.x"
+    "monostack": "^0.3.6",
+    "node-static": "^0.7.3",
+    "mongoose": "^3.8.11",
+    "dustjs-linkedin": "^2.3.5",
+    "dustjs-helpers": "^1.2.0",
+    "moment": "^2.6.0",
+    "express": "^3.8.0",
+    "formidable": "^1.0.14",
+    "bcrypt": "^0.7.8",
+    "handlebars": "^2.0.0-alpha.4",
+    "node-persist": "^0.0.2",
+    "mono-db-package": "^1.1.1",
+    "mono-mongo-package": "^1.0.3",
+    "mono-template-package": "^1.0.3",
+    "mono-http-package": "^1.0.4",
+    "mono-express-package": "^0.0.1",
+    "mono-session-package": "^0.0.3",
+    "mono-static-package": "^0.0.2",
+    "mono-mvc-package": "^1.0.7",
+    "mono-angular-package": "^0.0.3",
+    "mono-cache-package": "0.0.1"
   }
 }
